--- a/views/partials/projectsItems.ejs
+++ b/views/partials/projectsItems.ejs
@@ -10,27 +10,19 @@
               A simple blog website which allows blog creation, comment on each
               blog,like a blog, archive blogs, filter blogs
             </p>
-            <a
-              href="https://secure-coast-24568.herokuapp.com/home/1"
-              target="_blank"
-              class="btn btn-primary"
-              >Go to website</a
-            >
+            <a href="https://secure-coast-24568.herokuapp.com/home/1" target="_blank" class="btn btn-primary">Go to
+              website</a>
           </div>
         </div>
       </div>
       <div class="col-lg-4 my-2">
         <div class="card" style="width: 18rem">
-          <img src="image/agency.JPG" class="card-img-top" alt="..." />
+          <img src="image/bread.JPG" class="card-img-top" alt="..." />
           <div class="card-body">
-            <h5 class="card-title">Agency (Front-End)</h5>
-            <p class="card-text">A simple agency website</p>
-            <a
-              href="https://nameless-mesa-51583.herokuapp.com/"
-              target="_blank"
-              class="btn btn-primary"
-              >Go to website</a
-            >
+            <h5 class="card-title">Bread Blog (Front-End)</h5>
+            <p class="card-text">A simple blog website</p>
+            <a href="https://salty-wildwood-11233.herokuapp.com/" target="_blank" class="btn btn-primary">Go to
+              website</a>
           </div>
         </div>
       </div>
@@ -40,12 +32,8 @@
           <div class="card-body">
             <h5 class="card-title">Portfolio (Front-End)</h5>
             <p class="card-text">A simple portfolio website</p>
-            <a
-              href="https://shrouded-ravine-04614.herokuapp.com/"
-              target="_blank"
-              class="btn btn-primary"
-              >Go to website</a
-            >
+            <a href="https://shrouded-ravine-04614.herokuapp.com/" target="_blank" class="btn btn-primary">Go to
+              website</a>
           </div>
         </div>
       </div>
@@ -55,12 +43,8 @@
           <div class="card-body">
             <h5 class="card-title">Sushi (Front-End)</h5>
             <p class="card-text">A simple Japanese cuisine website</p>
-            <a
-              href="https://protected-brook-62291.herokuapp.com/"
-              target="_blank"
-              class="btn btn-primary"
-              >Go to website</a
-            >
+            <a href="https://protected-brook-62291.herokuapp.com/" target="_blank" class="btn btn-primary">Go to
+              website</a>
           </div>
         </div>
       </div>
